2011-05-11  Damian Kaleta  <dkaleta@apple.com>

        Reviewed by Brady Eidson.

        Need a new API that will try to restore the scrollbars' position, when navigating in the back/forward history
        https://bugs.webkit.org/show_bug.cgi?id=60674

        * UIProcess/API/C/WKPage.cpp:
        (WKPageTryRestoreScrollPosition):
        * UIProcess/API/C/WKPage.h:
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::tryRestoreScrollPosition):
        * UIProcess/WebPageProxy.h:
        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::tryRestoreScrollPosition):
        * WebProcess/WebPage/WebPage.h:
        * WebProcess/WebPage/WebPage.messages.in:

2011-05-11  Sam Weinig  <sam@webkit.org>

        Reviewed by Gavin Barraclough.

        WebKit2 doesn't build on Mac with strict PassOwnPtr
        https://bugs.webkit.org/show_bug.cgi?id=60655

        * Platform/CoreIPC/HandleMessage.h:
        (CoreIPC::handleMessageDelayed):
        Add explicit adoptPtr to indicate that the constructor is taking ownership.

2011-05-11  Jessie Berlin  <jberlin@apple.com>

        Reviewed by Steve Falkenburg.

        [Windows WebKit2] Use cookies set in WebKit1
        https://bugs.webkit.org/show_bug.cgi?id=60274

        Share the default storage session between the UI and Web Processes.

        * Shared/WebProcessCreationParameters.cpp:
        (WebKit::WebProcessCreationParameters::encode):
        Only encode the session parameter if it is valid.
        (WebKit::WebProcessCreationParameters::decode):
        Don't try to decode a null session data. 
        * Shared/WebProcessCreationParameters.h:
        Add a parameter for a serialized default storage session, used only on Windows.

        * Shared/win/WebCoreArgumentCodersWin.cpp:
        (CoreIPC::decodeResourceRequest):
        Make sure to set the current storage session on any requests used by the Web